GET by ID implemented for Exchange & Portfolio models (#35)
