# backend/src/routes/portfolio.js
@@ -9,6 +9,7 @@ const portfolioRoutes = (Portfolio, authMiddleware) => {
 
   router.route(GENERIC.ROUTES.PORTFOLIO).get(authMiddleware, getPortfolio);
   router.route(GENERIC.ROUTES.PORTFOLIO).post(authMiddleware, validatePortfolioPost(Portfolio), postPortfolio);
+  router.route(`${GENERIC.ROUTES.PORTFOLIO}/:id`).get(authMiddleware, getPortfolio);
   router.route(`${GENERIC.ROUTES.PORTFOLIO}/:id`).put(authMiddleware, validatePortfolioPut(), putPortfolio);
   router.route(`${GENERIC.ROUTES.PORTFOLIO}/:id`).delete(authMiddleware, deletePortfolio);
 
